--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,10 +55,9 @@ dependencies {
     implementation files('libs/jackson-core-2.2.3.jar')
     implementation files('libs/commons-validator-1.4.0.jar')
     implementation files('libs/commons-net-3.1.jar')
-
     implementation 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation "com.android.support:support-v4:28.0.0"
+    implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.squareup.okhttp:okhttp:2.5.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
@@ -68,8 +67,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.github.clans:fab:1.6.4'
     implementation 'com.google.guava:guava:16+'
-
     implementation('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
         transitive = true;
     }
+    implementation files('libs/RT_Android_Bluetooth_SDK_20150204.jar')
+    implementation 'org.jetbrains:annotations-java5:15.0'
 }
