--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,32 +29,45 @@
         android:usesCleartextTraffic="true">
         <activity android:name=".CountListOfAssortmentStock"
             android:label="@string/txt_header_inp_count"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden"></activity>
         <activity
             android:name=".Utils.DeviceListActivity"
-            android:configChanges="orientation|keyboardHidden"
             android:label="Select device"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo.Dialog" />
         <activity
             android:name=".HelpMain"
             android:label="Help page"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".ListAddedAssortmentInventory"
             android:label="Lista adaugate"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Help"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".CountListOfAssortmentInventory"
             android:label="@string/txt_header_inp_count"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".CountListOfAssortmentInvoice"
             android:label="@string/txt_header_inp_count"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -66,6 +79,8 @@
         <activity
             android:name=".Invoice"
             android:label="@string/btn_invoice_main_activity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -77,6 +92,8 @@
         <activity
             android:name=".CountStockAssortment"
             android:label="@string/txt_header_inp_count"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -88,6 +105,8 @@
         <activity
             android:name=".CountInventory"
             android:label="@string/txt_header_inp_count"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -99,6 +118,8 @@
         <activity
             android:name=".CountTransfer"
             android:label="@string/txt_header_inp_count"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -109,8 +130,8 @@
         </activity>
         <activity
             android:name=".CountSales"
-            android:configChanges="orientation"
             android:label="@string/txt_header_inp_count"
+            android:configChanges="orientation"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -121,8 +142,8 @@
         </activity>
         <activity
             android:name=".CountInvoice"
-            android:configChanges="orientation"
             android:label="@string/txt_header_inp_count"
+            android:configChanges="orientation"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -134,6 +155,8 @@
         <activity
             android:name=".CountListOfAssortment"
             android:label="@string/txt_header_inp_count"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -144,6 +167,8 @@
         </activity>
         <activity
             android:name=".ListAssortment"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -155,6 +180,8 @@
         <activity
             android:name=".StockAssortment"
             android:label="@string/btn_stock_asl_main_activity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -166,6 +193,8 @@
         <activity
             android:name=".Revisions"
             android:label="@string/header_of_lista_reviziilor"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -176,6 +205,8 @@
         </activity>
         <activity
             android:name=".Inventory"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -187,6 +218,8 @@
         <activity
             android:name=".Transfer"
             android:label="@string/btn_transfer_main_activity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -198,6 +231,8 @@
         <activity
             android:name=".SettingsMenu.About"
             android:label="@string/header_obout_program"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -220,6 +255,8 @@
         <activity
             android:name=".SettingsMenu.Printers"
             android:label="@string/header_printer_activity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -231,6 +268,8 @@
         <activity
             android:name=".SettingsMenu.WorkPlace"
             android:label="@string/header_workplace_activity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -242,6 +281,8 @@
         <activity
             android:name=".SettingsMenu.Conect"
             android:label="@string/header_conectare_activity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -253,6 +294,8 @@
         <activity
             android:name=".Sales"
             android:label="@string/btn_sales_main_activity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name=".SalesMobile" />
@@ -263,6 +306,8 @@
         <activity
             android:name=".CheckPrice"
             android:label="@string/btn_check_price"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -274,6 +319,8 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -283,8 +330,8 @@
         </activity>
         <activity
             android:name=".GetClient"
-            android:configChanges="orientation"
             android:label="@string/header_login_client_activity"
+            android:configChanges="orientation"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -295,8 +342,8 @@
         </activity>
         <activity
             android:name=".Login"
-            android:configChanges="orientation"
             android:label="@string/header_login_user_activity"
+            android:configChanges="orientation"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
