--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -255,6 +255,8 @@
         <activity
             android:name=".SettingsMenu.Securitate"
             android:label="@string/header_securitate_activity"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="fullSensor"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -267,7 +269,7 @@
             android:name=".SettingsMenu.Printers"
             android:configChanges="orientation"
             android:label="@string/header_printer_activity"
-            android:screenOrientation="portrait"
+            android:screenOrientation="fullSensor"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -278,9 +280,9 @@
         </activity>
         <activity
             android:name=".SettingsMenu.WorkPlace"
-            android:configChanges="orientation"
+            android:configChanges="orientation|screenSize"
             android:label="@string/header_workplace_activity"
-            android:screenOrientation="portrait"
+            android:screenOrientation="fullSensor"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -330,9 +332,9 @@
         </activity>
         <activity
             android:name=".activities.MainActivity"
-            android:configChanges="orientation"
+            android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
+            android:screenOrientation="fullSensor"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
