--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,26 +14,27 @@
 
     <application
         android:name=".BaseApp"
-        android:allowBackup="true"
         android:icon="@drawable/new_icon_app"
         android:label="@string/app_name"
         android:roundIcon="@drawable/new_icon_app"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        .
-        <activity android:name=".CheckoutActivity"
+        <activity
+            android:name=".CreateAssortment"
+            android:exported="true" />
+        <activity
+            android:name=".CheckoutActivity"
             android:configChanges="orientation"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".AuthorizeActivity"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
         <activity
-            android:label="Checkout"
             android:name=".SplashActivity"
             android:configChanges="orientation"
+            android:label="Checkout"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -193,7 +194,13 @@
             android:configChanges="orientation"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden"></activity>
+            android:windowSoftInputMode="stateHidden">
+            <intent-filter>
+                <action android:name=".AssortmentMobile" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".StockAssortment"
             android:configChanges="orientation"
@@ -329,13 +336,25 @@
             android:label="@string/btn_check_price"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden"></activity>
+            android:windowSoftInputMode="stateHidden">
+            <intent-filter>
+                <action android:name=".CheckPriceMobile" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".GetClient"
             android:configChanges="orientation"
